--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <p id="welcome-text">Seja bem-vindo!</p>
             <ul id="social-container">
                 <li><a href="https://www.linkedin.com/in/joão-vitor-campos-3b870b1b5/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-                <li><a href="https://github.com/BadMickey" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
-                <li><a href="#" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                <li><a href="https://github.com/Jvvcampos" target="_blank"><ion-icon name="logo-github"></ion-icon></a></li>
+                <li><a href="https://www.instagram.com/jvvcampos_/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
             </ul>
             <div id="email-container">
                 <ion-icon name="mail-outline"></ion-icon><a href="mailto:joaovitorcampos161@gmail.com">joaovitorcampos161@gmail.com</a>
@@ -38,7 +38,7 @@
                 programação em experiências práticas. Sou dedicado, motivado a aprender e comprometido em contribuir
                 positivamente para projetos desafiadores.
                 </p>
-            <a href="#" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon> <span>Ver repositórios</span></a>
+            <a href="https://github.com/Jvvcampos?tab=repositories" id="btn-projects"><ion-icon name="share-social-outline"></ion-icon> <span>Ver repositórios</span></a>
             <h2 id="skills-section-title">Minhas skills</h2>
             <p class="description">Conheça as tecnologias que domino:</p>
             <div id="skills-container">
